Fix navbar wrapping

--- a/frontend/src/app/components/master-page/master-page.component.scss
+++ b/frontend/src/app/components/master-page/master-page.component.scss
@@ -192,7 +192,7 @@ nav {
   align-items: center;
 }
 
-@media (min-width: 991px) {
+@media (min-width: 992px) {
   .search-form-container {
     width: 100%;
     max-width: 500px;
